--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
-AC_INIT([sgml-spell-checker], [esyscmd([echo -n "`date +%Y%m%d`"])], [peter_e@gmx.net])
+AC_INIT([sgml-spell-checker], esyscmd([echo -n "`date +%Y%m%d`"]), [peter_e@gmx.net])
 AC_PREREQ(2.52)
-AC_PATH_PROG(ASPELL, aspell)
-AC_PATH_PROG(PERL, perl)
-AC_PATH_PROG(SGMLSPL, sgmlspl)
+AC_PATH_PROG(ASPELL, aspell, aspell)
+AC_PATH_PROG(PERL, perl, perl)
+AC_PATH_PROG(SGMLSPL, sgmlspl, sgmlspl)
 AC_CONFIG_FILES(GNUmakefile)
 AC_OUTPUT
