--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -26,7 +26,7 @@ SGMLSPL = @SGMLSPL@
 DISTFILES = COPYING GNUmakefile.in README configure configure.ac \
 	docbook-exclusion-list.txt install-sh sgml-spell-checker.in \
 	sgml-spell-filter-spec.pl INSTALL mkinstalldirs \
-	sgml-spell-checker.1
+	sgml-spell-checker.1 NEWS
 
 all: sgml-spell-checker
 
